Se solucionó el problema del botón de agregar clientes que no leia la opcion de radiobutton, se solucionó dandole doble clic al radiobutton para que aparezca un procedimiento del mismo visual y se inserto el código que hace que hace aparecer el apartado de agregar varios clientes

--- a/UI.WinForm/UI.WinForm.csproj
+++ b/UI.WinForm/UI.WinForm.csproj
@@ -143,6 +143,9 @@
     <Compile Include="WelcomeForm.Designer.cs">
       <DependentUpon>WelcomeForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Base\BaseFixedForm.resx">
+      <DependentUpon>BaseFixedForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ChildForms\FormCalendar.resx">
       <DependentUpon>FormCalendar.cs</DependentUpon>
     </EmbeddedResource>
